--- a/ChessMotion/Info.plist
+++ b/ChessMotion/Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Inter-VariableFont_opsz,wght.ttf</string>
 		<string>InriaSerif-Regular.ttf</string>
 	</array>
 </dict>
